# cc-menu

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/cc-menu-cli/: Cargo.toml
crates/cc-menu-cli/src/: main.rs
crates/cc-menu-core/: Cargo.toml
crates/cc-menu-core/src/: config.rs  desktop.rs  gateway.rs  launch.rs  lib.rs  menu.rs  platform.rs  sessions.rs  sync.rs  workspace.rs
crates/cc-menu-installer/: Cargo.toml
crates/cc-menu-installer/src/: main.rs
docs/: implementation-map.md
scripts/: build-release.ps1  publish-release.ps1  self-test.ps1
tasks/: ai-coding-context-menu-plan.html
