[workspace]
members = [
    "crates/cc-menu-core",
    "crates/cc-menu-cli",
    "crates/cc-menu-installer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["CC Menu contributors"]
repository = "https://github.com/wellingfeng/cc-menu"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"
thiserror = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
