[package]
name = "cc-menu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
cc-menu-core = { path = "../cc-menu-core" }
serde_json.workspace = true
