[package]
name = "cc-menu-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cc-menu-core = { path = "../cc-menu-core" }
dirs.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[features]
default = []
embedded-payload = []
